apps/wiki/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wiki
  namespace: default
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    run: wiki
  type: ClusterIP
