apps/wiki/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: wiki-route
  namespace: default
spec:
  parentRefs:
  - kind: Gateway
    namespace: gateway-infra
    name: gateway
  hostnames:
  - wiki.wisv.ch
  rules:
  - backendRefs:
    - name: wiki
      port: 80
